welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:7: error: ';' expected but 'else' found.
	}else if (valAbs1(n:Int) <= 10 ){
         ^